# werkzeugkoppler

./: .gitignore  README.md  config.yaml.full_example  config.yaml.min_example  pyproject.toml  requirements.txt  werkzeugkoppler.sh
examples/: mock_mcp_server.py  mock_upstream_server.py
tests/: test_direct_command_output_limits.py  test_direct_commands.py  test_init_message_placeholders.py  test_logging_utils.py  test_model_fallback.py  test_thinking_field_mode.py  test_tool_name_mapping.py  test_upstream_retries.py  test_watchdog_reload_unittest.py
werkzeugkoppler/: __init__.py  __main__.py  app.py  chat_handlers.py  config.py  config_reload.py  direct_commands.py  gateway_service.py  json_helpers.py  local_actions.py  logging_utils.py  mcp_client.py  message_preparation.py  stream_chunks.py  tool_registry.py  upstream.py  utils.py
