[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "werkzeugkoppler"
version = "0.1.0"
description = "OpenAI-compatible gateway with upstream LLM and MCP tools"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "httpx>=0.28",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "PyYAML>=6.0",
]

[project.scripts]
werkzeugkoppler = "werkzeugkoppler.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["werkzeugkoppler*"]
